# cvxstatarb

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  stats_arb-0.0.1-py3-none-any.whl  stats_arb-0.0.2-py3-none-any.whl  test_policy.py
.github/: renovate.json
.github/workflows/: pre-commit.yml  release.yml  test.yml
cvx/stat_arb/: ccp.py
experiments/: backtest.py  finding-fixed-band-statarb.ipynb  finding-moving-band-statarb.ipynb  fixed_midpoint.ipynb  moving_midpoint.ipynb  statarb-portfolio.ipynb  utils.py
tests/: conftest.py  test_stat_arb.py
tests/resources/: daily_profit.csv  holdings.csv  sr_profit.csv  stat_arb_assets.csv  stat_arb_mu.csv  total_profit.csv
tests/resources/test_data/: generate_construct_test_data.py  stat_arb_assets.json  stat_arb_exit_date.csv  stat_arb_exit_trigger.csv  stat_arb_leverage.csv  stat_arb_metrics.csv  stat_arb_mu.csv  stat_arb_positions.csv  stat_arb_q.csv  stat_arb_stocks.csv
