[tool.poetry]
name = "stats-arb"
version = "0.1.0"
description = "Statistical arbitrage trading strategy using convex concave programming."
authors = ["Kasper Johansson, Thomas Schmelzer, and Stephen Boyd"]
readme = "README.md"
packages = [{include = "cvx"}]

[tool.poetry.dependencies]
python = "^3.9, <3.12"
numpy = "*"
cvxpy = "*"
#pandas = "^2.0.0"
cvxsimulator = "*"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
pytest = "8.2.2"
pytest-cov = "*"
#jupyter = "^1.0.0"

seaborn = "^0.13.2"
dask = "^2024.6.2"
tqdm = "^4.66.4"
matplotlib = "^3.9.0"
refinitiv-data = "*"
clarabel = "*"

#
#mosek = "^10.0.40"
yfinance = "^0.2.40"
wrds = "^3.1.6"
twelvedata = "^1.2.11"
graphviz = "^0.20.1"
quantstats = "*"
loguru = "*"
numpy_financial = "*"
mosek = "*"
cvxcovariance = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
