[project]
name = "stats-arb"
version = "0.0.0"
description = "Statistical arbitrage trading strategy using convex concave programming."
authors = [{name="Kasper Johansson"}, {name="Thomas Schmelzer"}, {name="Stephen Boyd"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cvxpy>=1.6.0",
    "numpy>=2.2.2",
]


[tool.poetry.dependencies]
cvxpy = "*"
#pandas = "^2.0.0"
cvxsimulator = "*"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
pytest = "8.3.4"
pytest-cov = "*"
#jupyter = "^1.0.0"

seaborn = "^0.13.2"
dask = "^2024.7.0"
tqdm = "^4.67.1"
matplotlib = "^3.9.4"
refinitiv-data = "*"
clarabel = "*"

#
#mosek = "^10.0.40"
yfinance = "^0.2.52"
wrds = "^3.2.0"
twelvedata = "^1.2.18"
graphviz = "^0.20.1"
quantstats = "*"
loguru = "*"
numpy_financial = "*"
mosek = "*"
cvxcovariance = "*"


[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cvx/stat_arb"]

